--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="description" content="this is a description!">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -10,22 +11,22 @@
     <div id="calculator">
         <input id="display" readonly>
       <div id="keys">
-        <button onclick="appendToDisplay('+')">+</button>
+        <button onclick="appendToDisplay('+')" id="op_btn">+</button>
         <button onclick="appendToDisplay('1')">1</button>
         <button onclick="appendToDisplay('2')">2</button>
         <button onclick="appendToDisplay('3')">3</button>
-        <button onclick="appendToDisplay('-')">-</button>
+        <button onclick="appendToDisplay('-')" id="op_btn">-</button>
         <button onclick="appendToDisplay('4')">4</button>
         <button onclick="appendToDisplay('5')">5</button>
         <button onclick="appendToDisplay('6')">6</button>
-        <button onclick="appendToDisplay('*')">*</button>
+        <button onclick="appendToDisplay('*')" id="op_btn">*</button>
         <button onclick="appendToDisplay('7')">7</button>
         <button onclick="appendToDisplay('8')">8</button>
         <button onclick="appendToDisplay('9')">9</button>
-        <button onclick="appendToDisplay('/')">/</button>
-        <button onclick="appendToDisplay('.')">.</button>
-        <button onclick="calculate()">=</button>
-        <button onclick="clearDisplay()">C</button>
+        <button onclick="appendToDisplay('/')" id="op_btn">/</button>
+        <button onclick="clearDisplay()" id="op_btn">C</button>
+        <button onclick="calculate()" id="op_btn">=</button>
+        <button onclick="appendToDisplay('.')">.</button>        
       </div>
     </div>
 
